Update to BETA_JAVA9 (#062ac5d7a6bf9) - 18-Sep-2017